fix search api
